--- a/similarity_search/2-1.RAG_DOC.ipynb
+++ b/similarity_search/2-1.RAG_DOC.ipynb
@@ -244,7 +244,7 @@
     "print(\"1.공통질문 :\",user_q)\n",
     "\n",
     "# Oracle's API for ollama\n",
-    "gen_param = \"\"\"{\"provider\":\"ollama\", \"host\":\"local\", \"url\":\"http://service-ollama:11434/api/generate\", \"model\":\"llama3.2\", \"temperature\":\"0\"}\"\"\"\n",
+    "gen_param = \"\"\"{\"provider\":\"ollama\", \"host\":\"local\", \"url\":\"http://service-ollama:11434/api/generate\", \"model\":\"llama3.2\", \"temperature\":\"0.1\",\"transfer_timeout\":\"300\"}\"\"\"\n",
     "print(\"2.Oracle's API for ollama :\")\n",
     "print(gen_param)\n",
     "\n",
